@@ -18,6 +18,7 @@ Other features
  * Pillow's image optimisation is now applied when saving PNG images (Dmitry Vasilev)
  * JS / CSS media files can now be associated with Draftail feature definitions (Matt Westcott)
  * The ``{% slugurl %}`` template tag is now site-aware (Samir Shah)
+ * Added ``file_size`` field to documents (Karl Hobley)
 
 Bug fixes
 ~~~~~~~~~
