@@ -1,3 +1,5 @@
+import os
+
 from django.shortcuts import get_object_or_404, redirect, render
 from django.urls import reverse
 from django.utils.translation import ugettext as _
@@ -94,6 +96,8 @@ def add(request):
         doc = Document(uploaded_by_user=request.user)
         form = DocumentForm(request.POST, request.FILES, instance=doc, user=request.user)
         if form.is_valid():
+            doc.file_size = doc.file.size
+
             form.save()
 
             # Reindex the document to make sure all tags are indexed
@@ -129,6 +133,8 @@ def edit(request, document_id):
         if form.is_valid():
             doc = form.save()
             if 'file' in form.changed_data:
+                doc.file_size = doc.file.size
+
                 # if providing a new document file, delete the old one.
                 # NB Doing this via original_file.delete() clears the file field,
                 # which definitely isn't what we want...
@@ -146,26 +152,24 @@ def edit(request, document_id):
     else:
         form = DocumentForm(instance=doc, user=request.user)
 
-    filesize = None
+    try:
+        local_path = doc.file.path
+    except NotImplementedError:
+        # Document is hosted externally (eg, S3)
+        local_path = None
 
-    # Get file size when there is a file associated with the Document object
-    if doc.file:
-        try:
-            filesize = doc.file.size
-        except OSError:
-            # File doesn't exist
-            pass
-
-    if not filesize:
-        messages.error(
-            request,
-            _("The file could not be found. Please change the source or delete the document"),
-            buttons=[messages.button(reverse('wagtaildocs:delete', args=(doc.id,)), _('Delete'))]
-        )
+    if local_path:
+        # Give error if document file doesn't exist
+        if not os.path.isfile(local_path):
+            messages.error(
+                request,
+                _("The file could not be found. Please change the source or delete the document"),
+                buttons=[messages.button(reverse('wagtaildocs:delete', args=(doc.id,)), _('Delete'))]
+            )
 
     return render(request, "wagtaildocs/documents/edit.html", {
         'document': doc,
-        'filesize': filesize,
+        'filesize': doc.get_file_size(),
         'form': form,
         'user_can_delete': permission_policy.user_has_permission_for_instance(
             request.user, 'delete', doc
