@@ -9,6 +9,7 @@ Changelog
  * Pillow's image optimisation is now applied when saving PNG images (Dmitry Vasilev)
  * JS / CSS media files can now be associated with Draftail feature definitions (Matt Westcott)
  * The `{% slugurl %}` template tag is now site-aware (Samir Shah)
+ * Added `file_size` field to documents (Karl Hobley)
  * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
  * Fix: Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))
 
